# agent-prov

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
demos/: research_pipeline.py  research_pipeline_bundle.json  research_pipeline_live.py  research_pipeline_mock.py  research_pipeline_mock_bundle.json
demos/document_review/: live.py  live_bundle.json  mock.py  mock_bundle.json
demos/langchain/biometric_review/: mock.py  mock_bundle.json
demos/langchain/document_review/: live.py  live_bundle.json  mock.py  mock_bundle.json
demos/langchain/research/: live.py  live_bundle.json  mock.py  mock_bundle.json
demos/langchain/tool_calling/: mock.py  mock_bundle.json
demos/openai_loop/: mock.py  mock_bundle.json
demos/research/: live.py  live_bundle.json  mock.py  mock_bundle.json
docs/: chapter1_intro.md  chapter2_background.md  chapter3_protocol.md  chapter4_implementation.md  chapter5_evaluation.md  chapter6_discussion.md  gap_analysis.md  obligation_summary.md  references.md
evaluation/: benchmark.py  benchmark_results.csv  completeness_checklist.csv  dev_effort.md
middleware/: bundle_generator.py  core.py  step_emitter.py
schemas/: agent_step.schema.json  human_intervention.schema.json  pipeline_bundle.schema.json  tool_invocation.schema.json
schemas/examples/: agent_step.invalid_missing_required.json
src/agent_prov/: __init__.py  _frames.py  _hashing.py  bundle_generator.py  core.py  hitl.py  session.py  step_emitter.py  tool_emitter.py  validation.py
src/agent_prov/adapters/: __init__.py
src/agent_prov/adapters/langchain/: __init__.py  _frames.py  middleware.py  step_emitter.py  tool_emitter.py
src/agent_prov/persistence/: __init__.py  __main__.py
src/agent_prov/reporting/: __init__.py  __main__.py  _pdf.py  compliance_report.py  obligations.py
src/agent_prov/schemas/: agent_step.schema.json  human_intervention.schema.json  pipeline_bundle.schema.json  tool_invocation.schema.json
src/agent_prov/signing/: __init__.py  __main__.py
src/agent_prov/verify/: __init__.py  __main__.py
src/middleware/: _hashing.py  bundle_generator.py  core.py  hitl.py  session.py  step_emitter.py  tool_emitter.py
src/reporting/: __init__.py  __main__.py  _pdf.py  compliance_report.py
tests/: _helpers.py  test_bundle_generator.py  test_hitl.py  test_middleware_core.py  test_schemas.py  test_step_emitter.py  test_tool_emitter.py
tests/integration/: test_middleware_pipeline.py
tests/schema_examples/: agent_step.invalid_bad_hash.json  agent_step.valid.json
tests/unit/: test_bundle_generator.py  test_compliance_report.py  test_hitl.py  test_middleware_core.py  test_persistence.py  test_schemas.py  test_session.py  test_signing.py  test_step_emitter.py  test_tool_emitter.py  test_validation.py  test_verify.py
