[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/middleware", "src/reporting"]

[project]
name = "agent-prov"
version = "0.1.0"
description = "AI Agent Provenance & Compliance Protocol — thesis PoC"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.18",
    "langchain-core>=1.3.3",
    "langgraph>=1.1.10",
    "python-dotenv>=1.2.2",
    "rfc8785>=0.1.4",
]

[project.optional-dependencies]
reporting = [
    "fpdf2>=2.8",
]

[dependency-groups]
dev = [
    "langchain-openai>=1.2.1",
    "pytest>=7.0",
    "fpdf2>=2.8",
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests"]
