[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_prov"]

[project]
name = "agent-prov"
version = "1.0.0"
description = "Provenance protocol for LLM multi-agent pipelines, mapped to EU AI Act Articles 12, 14, and 50"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Jovan Jokić", email = "jokicjovan@outlook.com" }]
keywords = ["provenance", "eu-ai-act", "compliance", "llm", "langgraph", "audit", "human-in-the-loop"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "jsonschema>=4.18",
    "rfc8785>=0.1.4",
]

[project.urls]
Homepage = "https://github.com/jokicjovan/agent-prov"
Repository = "https://github.com/jokicjovan/agent-prov"

[project.optional-dependencies]
reporting = [
    "fpdf2>=2.8",
]
# LangChain / LangGraph adapter (agent_prov.adapters.langchain). The protocol
# core needs no framework; this extra pulls the runtime the adapter and demos
# require. python-dotenv backs the live demos' .env loading.
langchain = [
    "langchain-core>=1.3.3",
    "langgraph>=1.1.10",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "langchain-core>=1.3.3",
    "langgraph>=1.1.10",
    "langchain-openai>=1.2.1",
    "python-dotenv>=1.2.2",
    "pytest>=7.0",
    "fpdf2>=2.8",
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests"]
